gccida/c3/redirect_edge_succ_nodup
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/redirect_edge_succ_nodup/src/cfg.c:940:12: error: expected expression
*( _OWORD *)&e->flags = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/redirect_edge_succ_nodup/src/cfg.c:940:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&e->flags = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/redirect_edge_succ_nodup/src/cfg.c:941:12: error: expected expression
*( _OWORD *)&e->insns = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/redirect_edge_succ_nodup/src/cfg.c:941:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&e->insns = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/redirect_edge_succ_nodup/src/cfg.c:942:12: error: expected expression
*( _OWORD *)&e->src = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/redirect_edge_succ_nodup/src/cfg.c:942:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&e->src = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/redirect_edge_succ_nodup/src/cfg.c:943:12: error: expected expression
*( _OWORD *)&e->pred_next = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/redirect_edge_succ_nodup/src/cfg.c:943:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&e->pred_next = 0LL; 
   ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/redirect_edge_succ_nodup/src/obj/cfg.o] Error 1
